# vimax_web

./: .gitignore  CODEBUDDY.md
.specify/: constitution.md  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codebuddy.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
backend/: .ruff.toml  pyproject.toml
backend/src/: config.py  database.py  main.py
backend/src/models/: __init__.py  generation_result.py  operation_log.py  project.py  step.py  template.py  user.py
backend/src/routers/: files.py  generations.py  operations.py  projects.py  stats.py  steps.py  templates.py  users.py  ws.py
backend/src/schemas/: __init__.py  generation_result.py  operation_log.py  project.py  statistics.py  step.py  template.py  user.py
backend/src/services/: comfyui_client.py  config_sync.py  file_manager.py  generation_monitor.py  generation_parser.py  progress_manager.py  statistics.py  vimax_runner.py
backend/src/templates/hanzi/: config.py  idea2video.yaml  progress.py
backend/src/templates/standard/: idea2video.yaml  progress.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  files.ts  generations.ts  operations.ts  projects.ts  stats.ts  steps.ts  templates.ts
frontend/src/hooks/: useCurrentUser.ts  useFileEditor.ts  useStdout.ts  useWebSocket.ts
specs/001-vimax-web-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+40 files in other folders)
